# math

./: .drone.star  .gitignore  .travis.yml  CMakeLists.txt  Jamfile  README.md  README.rst  appveyor.yml  build.jam  index.html  project-root.jam  t.cpp
.circleci/: config.yml
.drone/: boost.sh  drone.sh
.no.drone/: boost.sh
config/: Jamfile.v2  has_128bit_floatmax_t.cpp  has_mpfr_class.cpp  has_ntl_rr.cpp  is_MSVC1930_or_newer.cpp  is_ci_sanitizer_run.cpp
doc/: HTML4_symbols.qbk  HyperComplex.bib  HyperComplex.tex  Jamfile.v2  background.qbk  bessel_ik.qbk  bessel_introduction.qbk  bessel_jy.qbk  bessel_spherical.qbk  beta.qbk  big_whole.html  (+76 more)
include/boost/math/differentiation/: CMakeLists.txt  autodiff.hpp  autodiff_cpp11.hpp  autodiff_eigen.hpp  autodiff_reverse.hpp  eigen_support.hpp  finite_difference.hpp  lanczos_smoothing.hpp  my_stash.patch  stashed_copy.hpp  test_fwdiff_behavior.cpp
include/boost/math/differentiation/.cache/clangd/index/: autodiff_reverse.hpp.75F31CB11D876BAE.idx
include/boost/math/differentiation/detail/: autogenerated_gamma.hpp  generate_expression_templated_headers.py  reverse_mode_autodiff_basic_operator_overloads.hpp  reverse_mode_autodiff_comparison_operator_overloads.hpp  reverse_mode_autodiff_erf_overloads.hpp  reverse_mode_autodiff_expression_template_base.hpp  reverse_mode_autodiff_gamma_function_overloads.hpp  reverse_mode_autodiff_helper_functions.hpp  reverse_mode_autodiff_memory_management.hpp  reverse_mode_autodiff_stl_overloads.hpp  reverse_mode_autodiff_utilities.hpp
test/: CMakeLists.txt  Jamfile  Jamfile.v2  Jamfile_.v2  S_.ipp  __temporary_test.cpp  acosh_data.ipp  acosh_test.hpp  adaptive_gauss_kronrod_quadrature_test.cpp  agm_test.cpp  anderson_darling_test.cpp  asinh_data.ipp  asinh_test.hpp  assoc_legendre_p.ipp  atanassov_sequence_test.cpp  atanh_data.ipp  atanh_test.hpp  autodiff_reverse_test0.cpp  bernoulli_no_atomic_fail.cpp  bernoulli_no_atomic_mp.cpp  bessel_i_data.ipp  bessel_i_derivative_data.ipp  bessel_i_derivative_int_data.ipp  bessel_i_int_data.ipp  bessel_i_prime_int_data.ipp  bessel_iterator_test.cpp  bessel_j_data.ipp  bessel_j_derivative_data.ipp  bessel_j_derivative_int_data.ipp  bessel_j_derivative_large_data.ipp  bessel_j_int_data.ipp  bessel_j_large_data.ipp  bessel_j_prime_int_data.ipp  bessel_k_data.ipp  bessel_k_derivative_data.ipp  bessel_k_int_data.ipp  bessel_k_prime_int_data.ipp  bessel_y01_data.ipp  bessel_y01_prime_data.ipp  bessel_yn_data.ipp  (+732 more)
test/cmake_install_test/: CMakeLists.txt
test/cmake_install_test_legacy/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/cmake_subdir_test_legacy/: CMakeLists.txt
test/compile_test/: CMakeLists.txt  barycentric_rational_concept_test.cpp  barycentric_rational_incl_test.cpp  bernoulli_no_atomic_d.cpp  catmull_rom_incl_test.cpp  ccmath_next_incl_test.cpp  ccmath_sin_incl_test.cpp  compl_abs_incl_test.cpp  compl_acos_incl_test.cpp  compl_acosh_incl_test.cpp  compl_asin_incl_test.cpp  compl_asinh_incl_test.cpp  compl_atan_incl_test.cpp  compl_atanh_incl_test.cpp  cstdfloat_cmath_incl_test.cpp  cstdfloat_complex_incl_test.cpp  cstdfloat_concept_check_1.cpp  cstdfloat_concept_check_2.cpp  cstdfloat_concept_check_3.cpp  cstdfloat_concept_check_4.cpp  cstdfloat_limits_incl_test.cpp  cubic_spline_concept_test.cpp  diff_finite_difference_incl_test.cpp  diff_lanczos_smoothing.cpp  dist_arcsine_incl.test.cpp  dist_bernoulli_incl_test.cpp  dist_beta_incl_test.cpp  dist_binomial_incl_test.cpp  dist_cauchy_incl_test.cpp  dist_chi_squared_incl_test.cpp  dist_complement_incl_test.cpp  dist_dirichlet_incl_test.cpp  dist_empirical_cumulative_dist_func_incl_test.cpp  dist_exponential_incl_test.cpp  dist_extreme_value_incl_test.cpp  dist_find_location_incl_test.cpp  dist_find_scale_incl_test.cpp  dist_fisher_f_incl_test.cpp  dist_gamma_incl_test.cpp  dist_geometric_incl_test.cpp  (+122 more)
test/cuda/: Jamfile.v2  arcsine_cdf_double.cu  arcsine_pdf_double.cu  beta_double.cu  beta_float.cu  cauchy_cdf_float.cu  cauchy_pdf_double.cu  cauchy_pdf_float.cu  cauchy_quan_double.cu  cauchy_quan_float.cu  cbrt_double.cu  cbrt_float.cu  copysign_double.cu  cu.jam  cuda_check.cu  cuda_managed_ptr.hpp  erf_double.cu  erf_float.cu  erf_inv_double.cu  erf_inv_float.cu  ex_val_cdf_float.cu  ex_val_pdf_float.cu  ex_val_quan_double.cu  exp_cdf_float.cu  exp_pdf_double.cu  exp_pdf_float.cu  exponential_quan_double.cu  gamma_cdf_double.cu  gamma_p_deriv_double.cu  gamma_p_deriv_float.cu  gamma_p_double.cu  gamma_p_float.cu  gamma_pdf_double.cu  geo_cdf_double.cu  geo_quan_float.cu  ibeta_derivative_double.cu  ibeta_derivative_float.cu  inv_chi_sq_cdf_float.cu  inv_chi_sq_pdf_double.cu  inv_chi_sq_pdf_float.cu  (+206 more)
test/cuda/misc/: test_naive_monte_carlo.cu  test_naive_monte_carlo_host.cpp  test_naive_monte_carlo_output.txt
test/float128/: setup.hpp  test_bessel_i.cpp  test_bessel_k.cpp  test_digamma.cpp  test_erf.cpp  test_expint.cpp  test_factorials.cpp  test_gamma.cpp  test_ibeta.cpp  test_ibeta_inv_ab_4.cpp  test_polygamma.cpp  test_std_lib.cpp
test/modules/: Jamfile.v2  test_constants.cpp  test_core.cpp  test_policy.cpp  test_sf.cpp
test/test_instances/: double_test_instances_4.cpp  double_test_instances_7.cpp  float_test_instances_4.cpp  float_test_instances_7.cpp  ldouble_test_instances_4.cpp  ldouble_test_instances_7.cpp  real_concept_test_instances_4.cpp  real_concept_test_instances_7.cpp  test_instances.hpp
test/test_rational_instances/: test_rational.hpp  test_rational_double1.cpp  test_rational_double2.cpp  test_rational_double3.cpp  test_rational_double4.cpp  test_rational_double5.cpp  test_rational_float1.cpp  test_rational_float2.cpp  test_rational_float3.cpp  test_rational_float4.cpp  test_rational_ldouble1.cpp  test_rational_ldouble2.cpp  test_rational_ldouble3.cpp  test_rational_ldouble4.cpp  test_rational_ldouble5.cpp  test_rational_real_concept1.cpp  test_rational_real_concept2.cpp  test_rational_real_concept3.cpp  test_rational_real_concept4.cpp  test_rational_real_concept5.cpp
test/test_reverse_mode_autodiff_special_functions_compile/: specfun_list.txt
(+3055 files in other folders)
